--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <div class="contact-item">
                     📧 nextinhq@gmail.com
                 </div>
-                <div class="contact-item">
-                    🌐 ruzana-kan.github.io/nextin
+                <div class="contact-item"><a href="https://ruzana-kan.github.io/nextin/">🌐 ruzana-kan.github.io/nextin</a>
+                 
                 </div>
             </div>
         </header>
