--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Next In - Empowering Bangladesh with Programming & AI</title>
    <link rel="stylesheet" href="main.css">  
-<link rel="icon" href="D:\next in\logo.png">
+<link rel="icon" href="logo.png">
 </head>
 <body>
     <div class="container">
         <header class="header">
-            <h1>Next In</h1>
+            <img src="logo.png"height="120" width="110">
             <p class="tagline">Empowering Bangladesh with Programming & AI</p>
             <div class="contact-info">
                 <div class="contact-item">
