--- a/index.html
+++ b/index.html
@@ -54,27 +54,27 @@
                         <div class="course-content">
                             <div class="course-list">
                                 <div class="course-item">
-                                    <strong>Web Development</strong>
+                                    <strong>Modern Web Development Fundamentals</strong>
                                     Learn HTML, CSS, and the core principles of building responsive, modern websites.
                                 </div>
                                 <div class="course-item">
-                                    <strong>C Programming</strong>
+                                    <strong>C Programming: Logic & Problem Solving</strong>
                                     Understand the basics of programming logic, structure, and problem-solving.
                                 </div>
                                 <div class="course-item">
-                                    <strong>JavaScript</strong>
+                                    <strong>Interactive JavaScript Essentials</strong>
                                     Discover how to make websites interactive using dynamic scripting.
                                 </div>
                                 <div class="course-item">
-                                    <strong>PHP</strong>
+                                    <strong>PHP Server-Side Development</strong>
                                     Learn server-side scripting to build functional and data-driven web applications.
                                 </div>
                                 <div class="course-item">
-                                    <strong>Python</strong>
+                                    <strong>Python Programming Mastery</strong>
                                     Master the fundamentals of one of the most powerful and beginner-friendly programming languages.
                                 </div>
                                 <div class="course-item">
-                                    <strong>AI Prompt Engineering</strong>
+                                    <strong>AI Prompt Engineering & Optimization</strong>
                                     Learn how to craft effective prompts for AI and language models.
                                 </div>
                             </div>
@@ -90,36 +90,40 @@
                         <div class="course-content">
                             <div class="course-list">
                                 <div class="course-item">
-                                    <strong>Web Development</strong>
+                                    <strong>Full-Stack Web Development Bootcamp</strong>
                                     Learn HTML, CSS, and the core principles of building responsive, modern and fast websites.
                                 </div>
                                 <div class="course-item">
-                                    <strong>C Programming</strong>
+                                    <strong>Advanced C Programming & System Design</strong>
                                     Understand programming logic, structure, and problem-solving.
                                 </div>
                                 <div class="course-item">
-                                    <strong>JavaScript</strong>
+                                    <strong>Dynamic JavaScript & Frontend Mastery</strong>
                                     Discover how to make websites interactive using dynamic scripting.
                                 </div>
                                 <div class="course-item">
-                                    <strong>PHP</strong>
+                                    <strong>Professional PHP Backend Development</strong>
                                     Learn server-side scripting to build functional and data-driven web applications.
                                 </div>
                                 <div class="course-item">
-                                    <strong>Python</strong>
+                                    <strong>Python Development & Automation</strong>
                                     Master the fundamentals of one of the most powerful and beginner-friendly programming languages.
                                 </div>
                                 <div class="course-item">
-                                    <strong>AI Prompt Engineering</strong>
+                                    <strong>AI Prompt Engineering & LLM Integration</strong>
                                     Learn how to craft effective prompts for AI and language models.
                                 </div>
                                 <div class="course-item">
-                                    <strong>SQL</strong>
+                                    <strong>Database Management with SQL</strong>
                                     Learn to manage, query, and design databases used in real-world applications.
                                 </div>
                                 <div class="course-item">
-                                    <strong>Basic English</strong>
+                                    <strong>Professional English for Tech Careers</strong>
                                     Improve professional communication for tech environments.
+                                </div>
+                                <div class="course-item">
+                                    <strong>Survey</strong>
+                                    Master Survey Skills and Start Earning in Just One Week!
                                 </div>
                             </div>
                             
@@ -156,36 +160,40 @@
                         <div class="course-content">
                             <div class="course-list">
                                 <div class="course-item">
-                                    <strong>Web Development</strong>
+                                    <strong>Elite Web Development Certification</strong>
                                     Learn HTML, CSS, and the core principles of building responsive, modern and fast websites.
                                 </div>
                                 <div class="course-item">
-                                    <strong>C Programming</strong>
+                                    <strong>Systems Programming with C Mastery</strong>
                                     Understand programming logic, structure, and problem-solving.
                                 </div>
                                 <div class="course-item">
-                                    <strong>JavaScript</strong>
+                                    <strong>Advanced JavaScript & React Development</strong>
                                     Discover how to make websites interactive using dynamic scripting.
                                 </div>
                                 <div class="course-item">
-                                    <strong>PHP</strong>
+                                    <strong>Enterprise PHP & Laravel Development</strong>
                                     Learn server-side scripting to build functional and data-driven web applications.
                                 </div>
                                 <div class="course-item">
-                                    <strong>Python</strong>
+                                    <strong>Python AI & Machine Learning Track</strong>
                                     Master the fundamentals of one of the most powerful and beginner-friendly programming languages.
                                 </div>
                                 <div class="course-item">
-                                    <strong>AI Prompt Engineering</strong>
+                                    <strong>Professional AI Prompt Engineering</strong>
                                     Learn how to craft effective prompts for AI and language models.
                                 </div>
                                 <div class="course-item">
-                                    <strong>SQL</strong>
+                                    <strong>Advanced Database Architecture & SQL</strong>
                                     Learn to manage, query, and design databases used in real-world applications.
                                 </div>
                                 <div class="course-item">
-                                    <strong>Basic English</strong>
+                                    <strong>Tech Industry English Communication</strong>
                                     Improve professional communication for tech environments.
+                                </div>
+                                <div class="course-item">
+                                    <strong>Survey</strong>
+                                   Master Survey Skills and Start Earning in Just One Week!
                                 </div>
                             </div>
                             
